--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'application'
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.4.10'
 }
@@ -23,4 +24,8 @@ test {
         events = ["passed", "skipped", "failed"]
         exceptionFormat = 'full'
     }
+}
+
+application {
+    mainClass.set("Main")
 }
